--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <body>
 	<div class="board">
 	
+		  <form id="todo-form" >
+		<input type="text" placeholder="Tekst..." id="todo-input" />
+		<button type="submit">+ Dodaj pole</button>
+	  </form>
+	  
+	
 	<header>
 	  <nav>
 		<button class="hamburger" id="hamburger-button">
@@ -26,16 +32,12 @@
 	  </nav>
 	</header>
 	
-	  <form id="todo-form" >
-		<input type="text" placeholder="Tekst..." id="todo-input" />
-		<button type="submit">+ Dodaj pole</button>
-	  </form>
-	  
 	  <div class="temp-lane" id="temp-lane">
 	  </div>
 
 		<div class="workplan">
-		<center><img class="avatar" src="img/pratt-logo-small.png" alt="">PLAN PRACY</center> <span class="date"></span>
+		<center><img class="avatar" src="img/pratt-logo-small.png" alt="">PLAN PRACY<br></center>
+
 		</div>
 		<!--<div class="zmiany"><h3 class="heading"><center>ZMIANY</center></h3></div>-->
 		<div class="lanes">
@@ -46,31 +48,31 @@
 			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task2"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task3"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task4"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task5"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task6"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task7"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task8"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task9"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task10"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
 
@@ -80,34 +82,34 @@
 		  <div class="leader2" id="leader2">
 		  <div class="swim-lane zmiana" id="todo-lane">
 			<center><h4 class="heading2">ZMIANA</h1></center><h3 class="heading"><center>Krzysztof Zegar</center></h3>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task11"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task12"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task13"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task14"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task15"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task16"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task17"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task18"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task19"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task20"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
 
