--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 	  </div>
 
 		<div class="workplan">
-		<center><img class="avatar" src="img/pratt-logo-small.png" alt="">PLAN PRACY<br></center>
-
+		<center><img class="avatar" src="img/pratt-logo-small.png" alt="">PLAN PRACY</center> <span class="date"></span>
 		</div>
 		<!--<div class="zmiany"><h3 class="heading"><center>ZMIANY</center></h3></div>-->
 		<div class="lanes">
