--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl-PL">
   <head>
     <meta charset="UTF-8" />
 	<meta http-equiv='cache-control' content='no-cache'> 
@@ -44,34 +44,34 @@
 		  <div class="swim-lane zmiana" id="todo-lane">
 			<center><h4 class="heading2">ZMIANA</h1></center><h3 class="heading"><center>Waldemar Boguń</center></h3>
 
-			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://i.pravatar.cc/150?img=1" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task2"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task2"><img class="avatar" src="https://i.pravatar.cc/150?img=2" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task3"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task3"><img class="avatar" src="https://i.pravatar.cc/150?img=3" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task4"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task4"><img class="avatar" src="https://i.pravatar.cc/150?img=4" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task5"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task5"><img class="avatar" src="https://i.pravatar.cc/150?img=5" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task6"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task6"><img class="avatar" src="https://i.pravatar.cc/150?img=6" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task7"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task7"><img class="avatar" src="https://i.pravatar.cc/150?img=7" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task8"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task8"><img class="avatar" src="https://i.pravatar.cc/150?img=8" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task9"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task9"><img class="avatar" src="https://i.pravatar.cc/150?img=9" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task10"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task10"><img class="avatar" src="https://i.pravatar.cc/150?img=10" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
 
@@ -81,34 +81,34 @@
 		  <div class="leader2" id="leader2">
 		  <div class="swim-lane zmiana" id="todo-lane">
 			<center><h4 class="heading2">ZMIANA</h1></center><h3 class="heading"><center>Krzysztof Zegar</center></h3>
-			<p class="task" draggable="true" id="task11"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task11"><img class="avatar" src="https://i.pravatar.cc/150?img=11" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task12"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task12"><img class="avatar" src="https://i.pravatar.cc/150?img=12" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task13"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task13"><img class="avatar" src="https://i.pravatar.cc/150?img=13" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task14"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task14"><img class="avatar" src="https://i.pravatar.cc/150?img=14" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task15"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task15"><img class="avatar" src="https://i.pravatar.cc/150?img=15" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task16"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task16"><img class="avatar" src="https://i.pravatar.cc/150?img=16" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task17"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task17"><img class="avatar" src="https://i.pravatar.cc/150?img=17" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task18"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task18"><img class="avatar" src="https://i.pravatar.cc/150?img=18" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task19"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task19"><img class="avatar" src="https://i.pravatar.cc/150?img=19" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
-			<p class="task" draggable="true" id="task20"><img class="avatar" src="https://via.placeholder.com/150x150.png?text=Avatar" alt="">Monter
+			<p class="task" draggable="true" id="task20"><img class="avatar" src="https://i.pravatar.cc/150?img=20" alt="">Monter
 			<input type="text" class="task-desc" placeholder="Opis zadania" value="" />
 			</p>
 
