--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		<center><img class="avatar" src="img/pratt-logo-small.png" alt="">PLAN PRACY</center> <span class="date"></span>
 		</div>
 		
-				  <form id="todo-form" >
+		<span><form id="todo-form" >
 		<input type="text" placeholder="Tekst..." id="todo-input" />
 		<button type="submit">+ Dodaj pole</button>
-	  </form>
+	  </form></span>
 	  	  <div class="temp-lane" id="temp-lane">
 	  </div>
 		<div class="lanes">
