--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-	<meta http-equiv='cache-control' content='no-cache'> 
-	<meta http-equiv='expires' content='0'> 
-	<meta http-equiv='pragma' content='no-cache'>
+	<meta http-equiv="cache-control" content="no-cache">
+	<meta http-equiv="expires" content="0"> 
+	<meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pratt & Whitney AeroPower Plan Pracy</title>
 
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/script.js" defer></script>
-    <script src="js/todo.js" defer></script>
+    <script src="js/cosmetic.js" defer></script>
+	<script src="js/tasks.js" defer></script>
   </head>
   <body>
 	<div class="board">
-	
 	<header>
 	  <nav>
 		<button class="hamburger" id="hamburger-button">
@@ -39,37 +38,37 @@
 		<div class="lanes">
 		  <div class="leader" id="leader1">
 		  <div class="swim-lane" id="todo-lane">
-			<center><h4 class="heading2">ZMIANA</h1></center><h3 class="heading"><center>Waldemar Boguń</center></h3>
+			<center><h1 class="heading2">ZMIANA</h1></center><h2 class="heading"><center>Waldemar Boguń</center></h2>
 
 			<p class="task" draggable="true" id="task1"><img class="avatar" src="https://i.pravatar.cc/150?img=1" alt="">Monter
-			<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+			<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task2"><img class="avatar" src="https://i.pravatar.cc/150?img=2" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task3"><img class="avatar" src="https://i.pravatar.cc/150?img=3" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task4"><img class="avatar" src="https://i.pravatar.cc/150?img=4" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task5"><img class="avatar" src="https://i.pravatar.cc/150?img=5" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task6"><img class="avatar" src="https://i.pravatar.cc/150?img=6" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task7"><img class="avatar" src="https://i.pravatar.cc/150?img=7" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task8"><img class="avatar" src="https://i.pravatar.cc/150?img=8" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task9"><img class="avatar" src="https://i.pravatar.cc/150?img=9" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task10"><img class="avatar" src="https://i.pravatar.cc/150?img=10" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 
 		  </div>
@@ -77,36 +76,36 @@
 
 		  <div class="leader2" id="leader2">
 		  <div class="swim-lane zmiana" id="todo-lane">
-			<center><h4 class="heading2">ZMIANA</h1></center><h3 class="heading"><center>Krzysztof Zegar</center></h3>
+			<center><h1 class="heading2">ZMIANA</h1></center><h2 class="heading"><center>Krzysztof Zegar</center></h2>
 			<p class="task" draggable="true" id="task11"><img class="avatar" src="https://i.pravatar.cc/150?img=11" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task12"><img class="avatar" src="https://i.pravatar.cc/150?img=12" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task13"><img class="avatar" src="https://i.pravatar.cc/150?img=13" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task14"><img class="avatar" src="https://i.pravatar.cc/150?img=14" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task15"><img class="avatar" src="https://i.pravatar.cc/150?img=15" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task16"><img class="avatar" src="https://i.pravatar.cc/150?img=16" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task17"><img class="avatar" src="https://i.pravatar.cc/150?img=17" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task18"><img class="avatar" src="https://i.pravatar.cc/150?img=18" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task19"><img class="avatar" src="https://i.pravatar.cc/150?img=19" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 			<p class="task" draggable="true" id="task20"><img class="avatar" src="https://i.pravatar.cc/150?img=20" alt="">Monter
-						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" placeholder="Opis zadania"/></textarea>
+						<textarea rows="1" class="task-desc" oninput="autoExpand(this)" ondrop="return false;" placeholder="Opis zadania"/></textarea>
 			</p>
 
 
